# tsgenerator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: generateBenchmarks.py  generatePlots.R  runBenchmark.py
benchmark/algorithms/: calculateSimilarity.py  inc.py  insertResults.py  mk  mp.py
benchmark/results/: clustermkRuntimes.csv  clustermkStats.csv  emma2rStats.csv  emmaRuntimes.csv  emmaStats.csv  gvRuntimes.csv  gvStats.csv  lmRuntimes.csv  lmStats.csv  mkRuntimes.csv  mkStats.csv  mpRuntimes.csv  scanmkRuntimes.csv  scanmkStats.csv  setfinderRuntimes.csv  setfinderStats.csv
doc/: Doxygen.conf
doc/man/: TSGenerator.3
include/: basets.hpp  freepositions.hpp  global.hpp  motifsetcollection.hpp  outputgenerator.hpp  scrimpplusplus.hpp  stest.hpp  tsgenerator.hpp  unittests.hpp
libs/tsgenerator/: CMakeLists.txt
libs/tsgenerator/include/: basets.hpp
libs/tsgenerator/src/: basets.cpp  freepositions.cpp  motifsetcollection.cpp  scrimpplusplus.cpp  tsgenerator.cpp
libs/win32/fftw3/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
libs/win32/tsgenerator/: tsgenerator.lib
libs/win64/fftw3/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
libs/win64/tsgenerator/: tsgenerator.lib
share/doc/: Doxygen.in
share/man/: tsgenerator.3.in
src/: CMakeLists.txt  basets.cpp  global.cpp  main.cpp  motifsetcollection.cpp  scrimpplusplus.cpp  tsgenerator.cpp  unittests.cpp
tsgenerator/: CMakeLists.txt  tsgenerator.pc.in
tsgenerator-dev/: CMakeLists.txt
tsgenerator-dev/include/: scrimpplusplus.hpp  tpm.hpp  tsgenerator.hpp  tsgtypes.hpp  tsgutils.hpp  tsm.hpp
tsgenerator-dev/share/pkgconfig/: tsgenerator.pc.in
tsgenerator-dev/src/: CMakeLists.txt  basets.cpp  motifsetcollection.cpp  tpm.cpp  tsgenerator.cpp  tsgutils.cpp  tsm.cpp
tsgenerator-dev/test/: unittests.cpp  unittests.hpp
tsgenerator-gui/: CMakeLists.txt
tsgenerator-gui/include/: canvas.hpp  chart.hpp  chartview.hpp  global.hpp.in  outputgenerator.hpp  tsggui.hpp
tsgenerator-gui/src/: canvas.cpp  chart.cpp  chartview.cpp  global.cpp  main.cpp  outputgenerator.cpp  tsggui.cpp
tsgenerator/include/: basets.hpp  freepositions.hpp  global.hpp.in  motifsetcollection.hpp  outputgenerator.hpp  scrimpplusplus.hpp  tsgenerator.hpp  tsgtypes.hpp
tsgenerator/share/man/: tsgenerator.3.in
tsgenerator/share/pkgconfig/: tsgenerator.pc.in
tsgenerator/src/: basets.cpp  freepositions.cpp  global.cpp  main.cpp  outputgenerator.cpp  scrimpplusplus.cpp  tsgenerator.cpp
tsgenerator/test/: stest.hpp  unittests.cpp  unittests.hpp
